syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;

service Chat {
  rpc Connect(google.protobuf.Empty) returns (ConnectResponse);
  rpc ReceiveMessages(google.protobuf.Empty) returns (stream ReceiveMessageResponse);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message ConnectResponse {
  bool connected = 1;
}

message SendMessageRequest {
  string text = 1;
}

message ReceiveMessageResponse {
  string text = 1;
  string from = 2;
}